package Enum;

public enum UserRole {
    ADMIN,
    PATIENT
}
